Linux native notifications: Fix escaped characters in URL

BUG=751059
R=peter@chromium.org

Change-Id: I3172d8d77c88b8640b9f7bb8c244d9fba881e6c4
Reviewed-on: https://chromium-review.googlesource.com/717461
Commit-Queue: Thomas Anderson <thomasanderson@chromium.org>
Reviewed-by: Peter Beverloo <peter@chromium.org>
Cr-Commit-Position: refs/heads/master@{#508566}
Former-commit-id: 91e9f7f4b6aa4e866c44b96d43aec0a4e9bdbf2c